GET a recipient's signature
